amf-cli/shared/src/test/resources/parser-results/raml/error/unquoted-json-key-example.raml
#%RAML 1.0
title: hello

/hello:
  get:
  post:
    responses:
      202:
        body:
          application/json:
            type:
              properties:
                x: string
            example: |
              {
              x: "lala"
              }